--- a/PomodoroTimer/PomodoroTimer/MainWindow.xaml
+++ b/PomodoroTimer/PomodoroTimer/MainWindow.xaml
@@ -8,6 +8,7 @@
         Title="MainWindow" Height="65" Width="65"
 		Background="Transparent" AllowsTransparency="True" WindowStyle="None"
 		MouseLeftButtonDown="Window_MouseLeftButtonDown"
+		MouseLeftButtonUp="Window_MouseLeftButtonUp"
 		Topmost="True">
 	<Grid Background="Transparent">
 		<Ellipse Name="backgroundEllipse" Width="65" Height="65" Fill="Red" HorizontalAlignment="Center" VerticalAlignment="Center"/>
